# nii2dcm

./: .gitignore  Dockerfile  LICENSE  README.md  create_3d_dicom.py  example_3d.py  fcmr_4d_make_dicom.py  pyproject.toml  pyprojects.toml  requirements.txt  setup.cfg  setup.py  test_create_dcm.py
.github/workflows/: build.yml  build_and_test_cli.yml  docker.yml  publish_ghcr.yml  publish_pypi.yml  publish_testpypi.yml
nii2dcm/: __main__.py  _version.py  dcm.py  dcm_writer.py  module.py  nii.py  run.py  svr.py  utils.py  version.py
nii2dcm/modules/: README.md  common_instance_reference.py  frame_of_reference.py  general_acquisition.py  general_equipment.py  general_image.py  general_reference.py  general_series.py  general_study.py  image_pixel.py  image_plane.py  mr_image.py  patient.py  patient_study.py  sop_common.py  voi_lut.py
old/: fcmr_4d_make_dcm.ipynb  fcmr_4d_make_dicom.py
scripts/: convert_nii2dcm.py  create_3d_dicom.py  pydicom_dcm_write_example.py  test_create_dcm.py
src/: dcm.py  nii.py
tests/: test_dcm.py  test_dcm_writer.py  test_nii.py  test_run.py  test_version.py
