[build-system]
requires = ["setuptools>=64.0.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# [project]
# name = "nii2dcm"
# dynamic = ["version"]
#
# [tool.setuptools_scm]
# local_scheme = "no-local-version"  # required for PyPI and TestPyPI
# write_to = "nii2dcm/_version.py"