[metadata]
name = nii2dcm
version = attr: nii2dcm.__init__.__version__
description= nii2dcm: NIfTI to DICOM creation with Python
url = https://github.com/tomaroberts/nii2dcm
author = Tom Roberts
author_email = t.roberts@kcl.ac.uk
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = <3.12
install_requires =
    numpy==1.23.2
    matplotlib==3.6.2
    nibabel==5.0.0
    pydicom==2.3.0
    twine==4.0.2
    dunamai==1.18.0
include_package_data=True

[options.entry_points]
console_scripts =
    nii2dcm = nii2dcm.__main__:cli